--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ attrs==23.1.0
 Babel==2.14.0
 beautifulsoup4==4.12.2
 bleach==6.1.0
+blinker==1.7.0
 certifi==2023.11.17
 cffi==1.16.0
 charset-normalizer==3.3.2
@@ -22,13 +23,16 @@ defusedxml==0.7.1
 emoji==2.9.0
 executing==2.0.1
 fastjsonschema==2.19.0
+Flask==3.0.0
 fonttools==4.46.0
 fqdn==1.5.1
+helper==2.5.0
 idna==3.6
 ipykernel==6.27.1
 ipython==8.18.1
 ipywidgets==8.1.1
 isoduration==20.11.0
+itsdangerous==2.1.2
 jedi==0.19.1
 Jinja2==3.1.2
 joblib==1.3.2
@@ -49,6 +53,7 @@ jupyterlab-widgets==3.0.9
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.25.2
 kiwisolver==1.4.5
+logger==1.4
 MarkupSafe==2.1.3
 matplotlib==3.8.2
 matplotlib-inline==0.1.6
@@ -78,8 +83,7 @@ pyparsing==3.1.1
 python-dateutil==2.8.2
 python-json-logger==2.0.7
 pytz==2023.3.post1
-pywin32==306
-pywinpty==2.0.12
+
 PyYAML==6.0.1
 pyzmq==25.1.2
 qtconsole==5.5.1
@@ -111,4 +115,5 @@ wcwidth==0.2.12
 webcolors==1.13
 webencodings==0.5.1
 websocket-client==1.7.0
+Werkzeug==3.0.1
 widgetsnbextension==4.0.9
